--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 # === API KEYS ===
 OPENAI_API_KEY=sk-your-openai-key
 ELEVENLABS_API_KEY=your-elevenlabs-key
+DEFAULT_VOICE_ID=21m00Tcm4TlvDq8ikWAM
 
 # === AWS SERVICES ===
 AWS_ACCESS_KEY_ID=your-aws-access-key
@@ -37,3 +38,5 @@ SENTRY_DSN=your-sentry-dsn
 DEBUG=true
 LOG_LEVEL=INFO
 ENVIRONMENT=development
+
+
