--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,3 +51,16 @@ pytest-asyncio==0.21.1
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
+
+# Add to backend/requirements.txt
+
+# === AUDIO PROCESSING ===
+pydub==0.25.1
+ffmpeg-python==0.2.0
+
+# === TTS SERVICES ===
+elevenlabs==0.2.27
+boto3==1.34.0
+
+# === ASYNC HTTP ===
+aiohttp==3.9.1
