--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -91,3 +91,27 @@ tqdm==4.66.1
 # Advanced Audio Processing
 pedalboard==0.8.7  # For audio effects
 pyrubberband==0.3.0  # For time stretching
+
+# === WEEK 7: ASSET MANAGEMENT ===
+
+# Image Processing
+Pillow==10.1.0
+imagehash==4.3.1
+
+# Audio Analysis
+librosa==0.10.1
+soundfile==0.12.1
+
+# Video Analysis
+opencv-python-headless==4.8.1.78
+
+# Machine Learning (for content analysis)
+scikit-learn==1.3.2
+tensorflow==2.15.0  # Optional, for advanced analysis
+
+# CloudFront CDN
+boto3==1.34.0  # Already included
+
+# Asset Processing
+python-magic==0.4.27  # File type detection
+mutagen==1.47.0  # Audio metadata
