--- a/.env.example
+++ b/.env.example
@@ -39,4 +39,20 @@ DEBUG=true
 LOG_LEVEL=INFO
 ENVIRONMENT=development
 
+# Add to .env.example
 
+# === SOCIAL MEDIA APIS ===
+# YouTube
+YOUTUBE_CLIENT_ID=your-youtube-client-id
+YOUTUBE_CLIENT_SECRET=your-youtube-client-secret
+
+# Instagram (Facebook App)
+INSTAGRAM_CLIENT_ID=your-instagram-client-id
+INSTAGRAM_CLIENT_SECRET=your-instagram-client-secret
+
+# TikTok
+TIKTOK_CLIENT_KEY=your-tiktok-client-key
+TIKTOK_CLIENT_SECRET=your-tiktok-client-secret
+
+# Frontend URL (for OAuth callbacks)
+FRONTEND_URL=http://localhost:3000
